--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -903,6 +903,7 @@ section {
 
 @media screen and (min-width: 568px) {
     .form_field {
+        width: 100%;
         max-width: 560px;
         margin: 0 auto;
     }
@@ -912,10 +913,11 @@ section {
         padding: 0 var(--pd-1-5);
     }
     .contact_p {
-        padding: 0;
+        padding: var(--pd-1) 0;
     }
     .form_field {
-        min-width: 90%;
+        width: 100%;
+        max-width: 100%;
         padding: 0;
         display: flex;
         align-items: center;
@@ -940,7 +942,7 @@ section {
     }
     .further_details {
         width: 100%;
-        margin: 0 auto;
+        margin: var(--pd-1-5) auto;
         padding: 0;
     }
 }
@@ -951,6 +953,8 @@ section {
         margin: 0 auto;
     }
     .form_field {
+        width: 90%;
+
         margin: 0 auto;
     }
     .contact_form input,
@@ -977,6 +981,9 @@ section {
     .open_time,
     .call_us {
         margin: var(--mb-1) 0;
+    }
+    .further_details {
+        width: 90%;
     }
 }
 
